Exercise 1.09 More services/manifests/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: logoutput:1.0
          imagePullPolicy: IfNotPresent
